...
        .toolbar {
            ToolbarItem(placement: .topBarTrailing) {
                Button("Confirmation.Navbar.Logout") {
                    vm.showLogoutWarning = true
                }
                .foregroundStyle(.red)
                .accessibilityIdentifier("logoutButton")
            }
        }
        // Data
        .task {
            guard let currentUser = userState.currentUser else {
                dismiss()
...
        // Alerts
        .alert("Confirmation.Alert.Title",
               isPresented: $vm.showLogoutWarning) {
            Button("Confirmation.Alert.Confirm", role: .destructive) {
                vm.logoutUser(userState: userState)
            }
            .accessibilityIdentifier("logoutConfirmButton")
            
            Button("Confirmation.Alert.Cancel", role: .cancel) {}
        }
    }
}

...
